--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
@@ -27,6 +29,7 @@
     "lucide-react": "^0.373.0",
     "next": "14.2.2",
     "next-auth": "^5.0.0-beta.16",
+    "next-router-mock": "^0.9.13",
     "next-themes": "^0.3.0",
     "qrcode.react": "^3.1.0",
     "react": "^18",
@@ -38,12 +41,18 @@
     "zod": "^3.23.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
     "@types/bcrypt": "^5.0.2",
+    "@types/jest-json-schema": "^6.1.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-json-schema": "^6.1.0",
     "postcss": "^8",
     "prisma": "^5.13.0",
     "tailwindcss": "^3.4.1",
