fix auth and route

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 POSTGRES_PRISMA_URL="postgresql://postgres:1234@localhost:5432/paris-2024?schema=public"
 POSTGRES_URL_NON_POOLING="postgresql://postgres:1234@localhost:5432/paris-2024?schema=public"
-NEXTAUTH_SECRET=SMCiHhGS/F8LTCgzdVdohdMlnj0hHklwTey+2R51jpw=
+AUTH_SECRET=SMCiHhGS/F8LTCgzdVdohdMlnj0hHklwTey+2R51jpw=
+AUTH_URL= http://localhost:3000
